# tensorflow-object-detection-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  utils.cpp  utils.h  visutils.cpp  visutils.h
demo/ssd_mobilenet_v1_egohands/: labels_map.pbtxt
